feat: public landing influencers with videos
